--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,6 +19,7 @@ html {
  */
 body {
   margin: 0;
+  padding-right: 0 !important; /* https://github.com/Raathigesh/Lazymine/issues/85 */
 }
 /* HTML5 display definitions
    ========================================================================== */
