--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -70,12 +70,12 @@ body {
     overflow: visible;
 }
 
-.header .search-menu {
+.datepicker .search-menu {
     margin-top: -64px; !important;
 }
 
-.header .search-menu a {
-    color: #000;
+.datePicker .search-menu a {
+    color: #999;
 }
 
 .header-brand {
