--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,8 +52,25 @@ ul, li {
 #search {
     width: 100%;
     height: 40px;
-    font-size: 20px;
-    padding: 10px;
+    font-size: 16px;
+    padding-left: 35px;
+    background-color: #f5f5f5;
+    color: #212121;
+    -webkit-transition: all 1s;
+    /* Safari */
+    transition: all 1s;
+}
+
+#search:focus {
+    background-color: #FFF;
+    color: #fff;
+}
+
+.search-box i {
+    top: 17px;
+    position: absolute;
+    padding-left: 15px;
+    color: #212121;
 }
 
 .searchResult-description {
@@ -196,7 +213,7 @@ ul, li {
 }
 
 .nav {
-    margin :0;
+    margin: 0;
 }
 
 .nav.pull-right .dropdown-menu {
@@ -424,6 +441,6 @@ ul, li {
     }
 }
 
-.picker__holder{
+.picker__holder {
     overflow: hidden;
 }
