--- a/src/css/style.css
+++ b/src/css/style.css
@@ -229,9 +229,11 @@ ul, li {
 }
 
 .nav .dropdown-menu {
-    right: 17px;
-    left: -93px;
     top: 20px;
+}
+
+.dropdown-menu.dropdown-menu-right, .dropdown.pull-right .dropdown-menu, .nav.pull-right .dropdown-menu{
+    right: 15px;
 }
 
 .modal-dialog-about {
