Dummy data with styling for weekly time summary card - WIP

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,6 +72,10 @@ ul, li {
     color: #212121;
 }
 
+.search-box {
+    margin-bottom: 5px;
+}
+
 .searchResult-description {
     font-size: 13px;
 }
@@ -257,21 +261,21 @@ ul, li {
     margin-top: 10px;
 }
 
-        .cloudy:after {
-            -webkit-animation: cloudy_shadow 5s ease-in-out infinite;
-            animation: cloudy_shadow 5s ease-in-out infinite;
-            background: #000000;
-            border-radius: 50%;
-            content: '';
-            height: 15px;
-            width: 120px;
-            opacity: 0.2;
-            position: absolute;
-            left: 5px;
-            bottom: -20px;
-            -webkit-transform: scale(.7);
-            transform: scale(.7);
-        }
+.cloudy:after {
+    -webkit-animation: cloudy_shadow 5s ease-in-out infinite;
+    animation: cloudy_shadow 5s ease-in-out infinite;
+    background: #000000;
+    border-radius: 50%;
+    content: '';
+    height: 15px;
+    width: 120px;
+    opacity: 0.2;
+    position: absolute;
+    left: 5px;
+    bottom: -20px;
+    -webkit-transform: scale(.7);
+    transform: scale(.7);
+}
 
 @-webkit-keyframes cloudy {
     50% {
@@ -280,7 +284,11 @@ ul, li {
 }
 
 @-webkit-keyframes cloudy_shadow {
-    50% {  -webkit-transform: translateY(20px) scale(1); transform: translateY(20px) scale(1); opacity:.05; }
+    50% {
+        -webkit-transform: translateY(20px) scale(1);
+        transform: translateY(20px) scale(1);
+        opacity: .05;
+    }
 }
 
 .help-text {
@@ -295,6 +303,7 @@ ul, li {
     display: block;
     position: relative;
 }
+
 
 /* ---------- awads styles end -------------*/
 
@@ -486,7 +495,9 @@ ul, li {
     font-size: 18px;
 }
 
+
 /*fix scrolling */
+
 .overlay.hide .overlay_black {
     display: none;
 }
@@ -500,8 +511,47 @@ ul, li {
     margin-top: 0;
 }
 
+
 /* increase menu size */
-a.menu-icon{
+
+a.menu-icon {
     font-size: 22px;
     padding-right: 0;
+}
+
+
+/*custom colored card */
+
+.card-blue .card-header {
+    background-color: #0288D1;
+}
+
+.card-blue .card-heading {
+    color: #fff;
+}
+
+.card-blue .card-img {
+    background-color: #039BE5;
+    color: #fff;
+    margin-top: -1px;
+    min-height: 100px;
+    padding: 40px 0 0 10px;
+}
+
+.card-blue .card-header .card-inner, .card-blue .card-inner-side, .card-blue .tile-side {
+    padding: 0 0 0 0;
+}
+
+.card-key-value {
+    font-size: 90px;
+}
+
+.card-sub-heading {
+    font-size: 14px;
+}
+
+.daily-time-total {
+    font-size: 16px;
+    color: #039BE5;
+    padding-bottom: 15px;
 }
