--- a/src/css/style.css
+++ b/src/css/style.css
@@ -550,8 +550,26 @@ a.menu-icon {
     font-size: 14px;
 }
 
+.week-time-expand {
+    font-size: 25px;
+    color: #fff;
+    margin-top: -20px;
+}
+
+a.week-time-expand:focus, a.week-time-expand:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
 .daily-time-total {
     font-size: 16px;
     color: #039BE5;
     padding-bottom: 15px;
+}
+
+
+/* menu items font color*/
+
+.datePicker .search-menu a {
+    color: #444;
 }
