--- a/src/css/style.css
+++ b/src/css/style.css
@@ -519,6 +519,19 @@ a.menu-icon {
     padding-right: 0;
 }
 
+/* Updater */
+
+.updater-container {
+width:500px;
+height:500px;
+position:absolute;
+top:50%;
+left:50%;
+margin-top:-250px;
+margin-left:-250px;
+background-color:red;
+}
+
 
 /*custom colored card */
 
